--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2933,14 +2933,14 @@
 /* Banner */
 
 	#banner {
-		padding: 16em 0 14em 0;
+		padding: 50em 0 35em 0;
 		background-image: url('../../images/Engagement1.jpg'); 
 		background-size: cover;
 		background-position: top;
 		background-attachment: fixed;
 		background-repeat: no-repeat;
 		text-align: center;
-		border-top: 0.5em solid #5385c1;
+		border-top: 0.30em solid #383838;
 	}
 
 		#banner h1 {
