--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2946,7 +2946,7 @@
 		#banner h1 {
 			font-size: 3.5em;
 			font-weight: 100;
-			color: #fff;
+			color: #383838;
 			line-height: 1em;
 			margin: 0 0 0.5em 0;
 			padding: 0;
@@ -2954,7 +2954,7 @@
 
 		#banner p {
 			font-size: 1em;
-			color: rgba(255, 255, 255, 0.55);
+			color: #383838;
 			margin-bottom: 1.75em;
 		}
 
