--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2934,7 +2934,7 @@
 
 	#banner {
 		padding: 25em 0 12em 0;
-		background-image: url('../../images/Engagement1.jpg'); 
+		background-image: url('../../images/Hike.jpg'); 
 		background-size: cover;
 		background-position: top;
 		background-attachment: fixed;
