--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2938,7 +2938,7 @@
 		background-size: cover;
 		background-position: top;
 		background-attachment: fixed;
-		background-repeat: no-repeat;
+		background-repeat:repeat;
 		text-align: center;
 		border-top: 1em solid #383838;
 	}
