--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,20 +1,13 @@
-c1 {
-	color:#E5FCC2;
-}
-c2 {
-	color:#9DE0AD;
-}
-c3 {
-	color:#45ADA8;
-}
-c4 {
-	color:#547980;
-}
-primary {
-	color:#594F4F;
-}
+
+/* color:#E5FCC2; */
+/* color:#9DE0AD; */
+/* color:#45ADA8; */
+/* color:#547980; */
+/* color:#594F4F;  */
+
 .header {
-	background: primary;
+	padding: 0px 0px 0px 0px;
+	background: #594F4F;
 	color: #E5FCC2;
 }
 .sticky {
