--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 .header {
 	padding: 0px 0px 0px 0px;
 	background: #594F4F;
-	color: #E5FCC2;
+	color: #45ADA8;
 	align-content: center;
 }
 .sticky {
