--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,7 +9,7 @@
 	padding: 0px 0px 0px 0px;
 	background: #594F4F;
 	color: #45ADA8;
-	align-content: center;
+	content: center;	
 }
 .sticky {
 	position: fixed;
